fix: prevent visual blinks and layout jump on play page (#120)

--- a/webroot/css/default.css
+++ b/webroot/css/default.css
@@ -7726,3 +7726,7 @@ body.dark-theme .btn--warning {
 	width:310px;
 	height:205px;
 }
+
+#target {
+    min-height: 400px;
+}
